syntax = "proto3";

package action_catalog.common.v1;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/doordash/services-protobuf/generated/action-catalog/common";
option java_multiple_files = true;
option java_package = "com.doordash.rpc.action_catalog.common";

// Primitive values
message PrimitiveValue {
  // The primitive value values
  oneof value {
    // Bool value
    google.protobuf.BoolValue bool_value = 1;
    // String value
    google.protobuf.StringValue string_value = 2;
    // Int32 value
    google.protobuf.Int32Value int_value = 3;
    // Float value
    google.protobuf.FloatValue float_value = 4;
  }
}
