syntax = "proto3";

package autonomous_delivery_platform.v1;

import "autonomous_delivery_platform/common.proto";
import "google/protobuf/wrappers.proto";

option java_generic_services = true;
option java_multiple_files = true;
option java_outer_classname = "Settings";
option java_package = "com.doordash.rpc.autonomous_delivery_platform.v1";

// Autonomous delivery settings RPCs
service AutonomousDeliverySettingsService {
  // Get AV settings
  rpc GetAvSettings(GetAvSettingsRequest) returns (GetAvSettingsResponse);
  // Update AV settings
  rpc UpdateAvSettings(UpdateAvSettingsRequest) returns (UpdateAvSettingsResponse);
  // Get AV setting by setting key
  rpc GetAvSettingByKey(GetAvSettingByKeyRequest) returns (GetAvSettingByKeyResponse);
}

// Select option for multi select settings
message SettingSelectOption {
  // Name to be displayed on the client for this option
  string display_name = 1;
  // Value to be used for this option if selected
  string value = 2;
}

// A single AV setting
message AvSetting {
  // Setting key that uniquely identifies this setting
  string setting_key = 1;
  // Setting value
  oneof setting_value {
    // Integer value of the setting
    google.protobuf.Int64Value int_value = 2;
    // String value of the setting
    google.protobuf.StringValue string_value = 3;
    // Boolean value of the setting
    google.protobuf.BoolValue boolean_value = 4;
    // Float value of the setting
    google.protobuf.FloatValue float_value = 5;
  }
  // Settings title to be displayed in internal dashboard
  string title = 6;
  // Settings description to be displayed in internal dashboard
  string description = 7;
  // Optional prefix
  google.protobuf.StringValue prefix = 8;
  // Optional suffix, such as '%' or 'g'
  google.protobuf.StringValue suffix = 9;
  // List of elect options for multi select settings
  repeated SettingSelectOption select_options = 10;
  // Optional validation regex for strings
  google.protobuf.StringValue string_validation_regex = 11;
}

// Setting hierarchy to display on screen
message SettingHierarchy {
  // Optional title for this group of settings
  google.protobuf.StringValue title = 1;
  // Setting key that enables/disables children settings
  google.protobuf.StringValue setting_key = 2;
  // Setting value which would enable children settings
  oneof setting_enable_value {
    // Integer value of the setting
    google.protobuf.Int64Value int_value = 3;
    // String value of the setting
    google.protobuf.StringValue string_value = 4;
    // Boolean value of the setting
    google.protobuf.BoolValue boolean_value = 5;
    // Float value of the setting
    google.protobuf.FloatValue float_value = 6;
  }
  // Children settings under this setting hierarchy
  repeated SettingHierarchy children_setting_hierarchies = 7;
}

// Request for getting AV settings for a given store or business
message GetAvSettingsRequest {
  // Entity level for which settings is requested
  Entity entity = 1;
  // AV type
  AvType av_type = 2;
}

// Response for av settings for a given store or business
message GetAvSettingsResponse {
  // Unique ID (int64) of the store (if queried at store level)
  google.protobuf.Int64Value store_id = 1;
  // Name of the store (if queried at store level)
  google.protobuf.StringValue store_name = 2;
  // Unique ID (int64) of the business
  int64 business_id = 3;
  // Name of the business
  string business_name = 4;
  // AV type
  AvType av_type = 5;
  // Settings for this store
  repeated AvSetting store_settings = 6;
  // Settings for this business
  repeated AvSetting business_settings = 7;
  // Default settings
  repeated AvSetting default_settings = 8;
  // Setting hierarchy for displaying on screen
  repeated SettingHierarchy setting_hierarchies = 9;
}

// Request for updating AV settings for a given store or business
message UpdateAvSettingsRequest {
  // Entity level for which settings is being updated
  Entity entity = 1;
  // Av type
  AvType av_type = 2;
  // User id of user who's updating settings
  int64 updated_by_user_id = 3;
  // Settings to be updated for this entity
  repeated AvSetting settings = 4;
}

// Response for updating AV settings for a given store or business
message UpdateAvSettingsResponse {
  // reserved index for warning_message
  reserved 1;
  // reserved name for warning_message
  reserved "warning_message";
  // Warnings when updating settings
  repeated UpdateAvSettingsWarning warnings = 2;
  // Errors when updating settings
  repeated UpdateAvSettingsError errors = 3;
}

// Warning message for a setting key
message UpdateAvSettingsWarning {
  // Setting key
  string setting_key = 1;
  // Message when updating a setting resulted in a warning
  string warning_message = 2;
}

// Warning message for a setting key
message UpdateAvSettingsError {
  // Setting key
  string setting_key = 1;
  // Message when updating a setting resulted in an error
  string error_message = 2;
}

// Get AV setting by setting key request
message GetAvSettingByKeyRequest {
  // Entity level for which setting is requested
  Entity entity = 1;
  // AV type
  AvType av_type = 2;
  // Setting key
  string setting_key = 3;
}

// Get AV setting by setting key response
message GetAvSettingByKeyResponse {
  // Setting value
  AvSetting setting = 1;
}
