syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package privacy.common;
option java_package = "com.doordash.rpc.privacy.common";

enum ProfileType {
  UNKNOWN = 0;
  CONSUMER = 1;
  DASHER = 2;
  EMPLOYEE = 3;
  MERCHANT = 4;
}

enum StatusCode {
  IN_PROGRESS = 0;
  NEW = 1;
  ERROR = 2;
  COMPLETE = 3;
  CANCELLED = 4;
  WAIT = 5;
  DENIED = 6;
}
